2008-06-16  Sanel <karijes@users.sourceforge.net>

	* Fixed a typo with __EDBUSMESSAGE_H__ in EdbusMessage.h

2008-06-04  Sanel <karijes@users.sourceforge.net>

	* Fixed bool value checks in Config class (thanks to Vedran note)
	* Added that to tests too

2008-05-10  Sanel <karijes@users.sourceforge.net>
	
	* Forgot to update Jamrule and it's MakeTest for dbus usage via 
	"use-dbus" flag

2008-04-5  Sanel <karijes@users.sourceforge.net>

	* Fixed assertion check in is_double() in EdbusData
	* Fixed remove_all() in EdbusList
	* Test for dbus code. Not completed....

2008-03-25  Sanel <karijes@users.sourceforge.net>

	* Let 'jam distclean' clean Doxyfile too

2008-03-24  Sanel <karijes@users.sourceforge.net>

	* Rewamped build stuff. Now shared library is build via libtool
	* EdbusConnection.h and EdbusObjecPath.h docs todo

2008-03-17  Sanel <karijes@users.sourceforge.net>

	* Removed tests for STL
	* Improved edelib-config
	* Added FLTKLIBS and FLTKLIBS_FULL expansions
	* Added dbus flags and libs expansions
	* Merged dbus code into edelib
	* Doing some grouping with documentation; things are becommimng messy

2008-03-13  Sanel <karijes@users.sourceforge.net>

	* Added == and != opeators in list with tests
	* Added const_iterator in list. Changed DesktopFile.cpp to reflect that
	too

2008-03-06  Sanel <karijes@users.sourceforge.net>

	* Updated test/perf/stringtok.cpp to the latest changes
	* Added strsplit.{h,cpp} as comparison with stringtok()

2008-03-04  Sanel <karijes@users.sourceforge.net>

	* Added findfile.m4, pkg.m4 and dbus.m4 macros. Mostly for D-BUS
	detection. D-BUS will be first detected via pkg-config; if pkg-config does
	not exists, configure will manually scan known places for headers and
	libraries
	* Removed dir_remove_rec(). Hoping some day I will add better code.
	* Replaced DIR_SEPARATOR and DIR_SEPARATOR_STR with E_DIR_SEPARATOR and
	E_DIR_SEPARATOR_STR all over the code 
	* Added dir_create_with_parents() with the tests
