@@ -10,5 +10,4 @@
 
 SubDir TOP tools ;
 
-#SubInclude TOP tools edelib-dbus-xml2cpp ;
-#SubInclude TOP tools edelib-dbus-introspect ;
+SubInclude TOP tools edelib-dbus-introspect ;
