@@ -8,6 +8,6 @@
 # GNU General Public Licence version 2 or newer.
 # See COPYING for details.
 
-SubDir TOP tools edelib-dbus-xml2cpp ;
+SubDir TOP tools edelib-dbus-introspect ;
 
-MakeTest edelib-dbus-xml2cpp : edelib-dbus-xml2cpp.cpp ;
+MakeTest edelib-dbus-introspect : edelib-dbus-introspect.cpp : -ledelib_dbus $(FLTKLIBS) -ledelib -ldbus-1 ;
